--- a/index.html
+++ b/index.html
@@ -19,79 +19,102 @@
         </div>
         <div class="v207_966">
             <div class="v117_16">
-                <div class="v41_56"></div><span class="v41_59"><a href="./Hostels/index.html" style="color: white; text-decoration: none;">HOSTELS</a></span>
+                <div class="v41_56"></div><span class="v41_59"><a href="./Hostels/index.html"
+                        style="color: white; text-decoration: none;">HOSTELS</a></span>
             </div>
             <div class="v117_10">
-                <div class="v1_10"></div><span class="v40_46"><a href="./TechPark/index.html" style="color: white; text-decoration: none;">TECH PARK </a></span>
+                <div class="v1_10"></div><span class="v40_46"><a href="./TechPark/index.html"
+                        style="color: white; text-decoration: none;">TECH PARK </a></span>
             </div>
             <div class="v192_129">
                 <div class="v122_139">
-                    <div class="v122_140"></div><span class="v122_141"><a href="https://www.google.com/maps/dir//kaari+hostel+ktr+srm/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3a52f76d4cecae21:0x4ffbf1222ec00611?sa=X&ved=2ahUKEwi8y-W67r6AAxVS4TgGHbCkCoMQ9Rd6BAhaEAA&ved=2ahUKEwi8y-W67r6AAxVS4TgGHbCkCoMQ9Rd6BAhoEAQ" style="color: white; text-decoration: none;">Direction</a></span>
+                    <div class="v122_140"></div><span class="v122_141"><a
+                            href="https://www.google.com/maps/dir//kaari+hostel+ktr+srm/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3a52f76d4cecae21:0x4ffbf1222ec00611?sa=X&ved=2ahUKEwi8y-W67r6AAxVS4TgGHbCkCoMQ9Rd6BAhaEAA&ved=2ahUKEwi8y-W67r6AAxVS4TgGHbCkCoMQ9Rd6BAhoEAQ"
+                            style="color: white; text-decoration: none;">Direction</a></span>
                     <div class="v122_142"></div>
                 </div>
             </div>
             <div class="v192_130">
                 <div class="v151_6">
-                    <div class="v151_7"></div><span class="v151_8"><a href="https://www.google.com/maps/dir//techpark+srm+ktr/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3a52f70d1d93653b:0x7648f1677f1242c8?sa=X&ved=2ahUKEwiYobHg7r6AAxUq3jgGHYhtCVQQ9Rd6BAhOEAA&ved=2ahUKEwiYobHg7r6AAxUq3jgGHYhtCVQQ9Rd6BAhXEAQ" style="color: white; text-decoration: none;">Direction</a></span>
+                    <div class="v151_7"></div><span class="v151_8"><a
+                            href="https://www.google.com/maps/dir//techpark+srm+ktr/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3a52f70d1d93653b:0x7648f1677f1242c8?sa=X&ved=2ahUKEwiYobHg7r6AAxUq3jgGHYhtCVQQ9Rd6BAhOEAA&ved=2ahUKEwiYobHg7r6AAxUq3jgGHYhtCVQQ9Rd6BAhXEAQ"
+                            style="color: white; text-decoration: none;">Direction</a></span>
                     <div class="v151_9"></div>
                 </div>
             </div>
         </div>
         <div class="v207_965">
             <div class="v117_12">
-                <div class="v41_57"></div><span class="v41_58"><a href="./TPGaneshan/index.html" style="color: white; text-decoration: none;">TP GANESHAN
-                    AUDITORIUM</a></span>
+                <div class="v41_57"></div><span class="v41_58"><a href="./TPGaneshan/index.html"
+                        style="color: white; text-decoration: none;">TP GANESHAN
+                        AUDITORIUM</a></span>
             </div>
             <div class="v117_11">
-                <div class="v1_11"></div><span class="v40_40"><a href="./UB/index.html" style="color: white; text-decoration: none;">UNIVERSITY
-                    BUILDING</a></span>
+                <div class="v1_11"></div><span class="v40_40"><a href="./UB/index.html"
+                        style="color: white; text-decoration: none;">UNIVERSITY
+                        BUILDING</a></span>
             </div>
             <div class="v192_128">
                 <div class="v122_134">
-                    <div class="v122_124"></div><span class="v122_127"><a href="https://www.google.com/maps/dir/13.0477875,80.2655737/tp+gaenshan+srm+ktr/@12.9387973,79.9887481,11z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x3a52f70c95688435:0xfb2355e047e8b473!2m2!1d80.0466801!2d12.8247646?entry=ttu" style="color: white; text-decoration: none;">Direction</a></span>
+                    <div class="v122_124"></div><span class="v122_127"><a
+                            href="https://www.google.com/maps/dir/13.0477875,80.2655737/tp+gaenshan+srm+ktr/@12.9387973,79.9887481,11z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x3a52f70c95688435:0xfb2355e047e8b473!2m2!1d80.0466801!2d12.8247646?entry=ttu"
+                            style="color: white; text-decoration: none;">Direction</a></span>
                     <div class="v117_91"></div>
                 </div>
             </div>
             <div class="v192_127">
                 <div class="v122_135">
-                    <div class="v122_136"></div><span class="v122_137"><a href="https://www.google.com/maps/dir//ub+srm+ktr/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3a52f712b2085c8f:0x6093f4e9e56b5aeb?sa=X&ved=2ahUKEwiRtqeF7r6AAxUh-TgGHU61BMYQ9Rd6BAhJEAA&ved=2ahUKEwiRtqeF7r6AAxUh-TgGHU61BMYQ9Rd6BAhPEAQ" style="color: white; text-decoration: none;">Direction</a></span>
+                    <div class="v122_136"></div><span class="v122_137"><a
+                            href="https://www.google.com/maps/dir//ub+srm+ktr/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3a52f712b2085c8f:0x6093f4e9e56b5aeb?sa=X&ved=2ahUKEwiRtqeF7r6AAxUh-TgGHU61BMYQ9Rd6BAhJEAA&ved=2ahUKEwiRtqeF7r6AAxUh-TgGHU61BMYQ9Rd6BAhPEAQ"
+                            style="color: white; text-decoration: none;">Direction</a></span>
                     <div class="v122_138"></div>
                 </div>
             </div>
         </div>
         <div class="v207_968">
             <div class="v117_14">
-                <div class="v41_66"></div><span class="v41_69"><a href="./Arch/index.html" style="color: white; text-decoration: none;">ARCHITECTURE</a></span>
+                <div class="v41_66"></div><span class="v41_69"><a href="./Arch/index.html"
+                        style="color: white; text-decoration: none;">ARCHITECTURE</a></span>
             </div>
             <div class="v117_15">
-                <div class="v41_67"></div><span class="v41_68"><a href="./Management/index.html" style="color: white; text-decoration: none;">MANAGEMENT</a></span>
+                <div class="v41_67"></div><span class="v41_68"><a href="./Management/index.html"
+                        style="color: white; text-decoration: none;">MANAGEMENT</a></span>
             </div>
             <div class="v192_134">
                 <div class="v122_155">
-                    <div class="v122_156"></div><span class="v122_157"><a href="   " style="color: white; text-decoration: none;">Direction</a></span>
+                    <div class="v122_156"></div><span class="v122_157"><a href="   "
+                            style="color: white; text-decoration: none;">Direction</a></span>
                     <div class="v122_158"></div>
                 </div>
             </div>
             <div class="v192_133">
-                <div class="v122_160"></div><span class="v122_161"><a href="https://www.google.com/maps/dir//SRM+College+of+Management,+Potheri,+SRM+Nagar,+Kattankulathur,+Tamil+Nadu+603203/@12.8236295,79.967902,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3a52f70d33728641:0xb93677dd8a297c92!2m2!1d80.0441197!2d12.8236295?entry=ttu" style="color: white; text-decoration: none;">Direction</a></span>
+                <div class="v122_160"></div><span class="v122_161"><a
+                        href="https://www.google.com/maps/dir//SRM+College+of+Management,+Potheri,+SRM+Nagar,+Kattankulathur,+Tamil+Nadu+603203/@12.8236295,79.967902,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3a52f70d33728641:0xb93677dd8a297c92!2m2!1d80.0441197!2d12.8236295?entry=ttu"
+                        style="color: white; text-decoration: none;">Direction</a></span>
                 <div class="v122_162"></div>
             </div>
         </div>
         <div class="v207_967">
             <div class="v117_9">
-                <div class="v41_61"></div><span class="v41_64"><a href="./BioTech/index.html" style="color: white; text-decoration: none;">BIO TECH</a></span>
+                <div class="v41_61"></div><span class="v41_64"><a href="./BioTech/index.html"
+                        style="color: white; text-decoration: none;">BIO TECH</a></span>
             </div>
             <div class="v117_13">
-                <div class="v41_62"></div><span class="v41_63"><a href="./Medical/index.html" style="color: white; text-decoration: none;"> MEDICAL</a></span>
+                <div class="v41_62"></div><span class="v41_63"><a href="./Medical/index.html"
+                        style="color: white; text-decoration: none;"> MEDICAL</a></span>
             </div>
             <div class="v192_131">
                 <div class="v122_147">
-                    <div class="v122_148"></div><span class="v122_149"><a href="https://www.google.com/maps/dir//R2FV%2BVHQ+SRM+Biotech+Block,+Potheri,+SRM+Nagar,+Kattankulathur,+Tamil+Nadu+603203/@12.8247196,80.0413965,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3a52f70d1594d823:0xe92b95fb573865bd!2m2!1d80.0439714!2d12.8247144?entry=ttu" style="color: white; text-decoration: none;">Direction</a></span>
+                    <div class="v122_148"></div><span class="v122_149"><a
+                            href="https://www.google.com/maps/dir//R2FV%2BVHQ+SRM+Biotech+Block,+Potheri,+SRM+Nagar,+Kattankulathur,+Tamil+Nadu+603203/@12.8247196,80.0413965,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3a52f70d1594d823:0xe92b95fb573865bd!2m2!1d80.0439714!2d12.8247144?entry=ttu"
+                            style="color: white; text-decoration: none;">Direction</a></span>
                     <div class="v122_150"></div>
                 </div>
             </div>
             <div class="v192_132">
-                <div class="v122_152"></div><span class="v122_153"><a href="https://www.google.com/maps/dir//R2FV%2BVHQ+SRM+Biotech+Block,+Potheri,+SRM+Nagar,+Kattankulathur,+Tamil+Nadu+603203/@12.8247196,80.0413965,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3a52f70d1594d823:0xe92b95fb573865bd!2m2!1d80.0439714!2d12.8247144?entry=ttu" style="color: white; text-decoration: none;">Direction</a></span>
+                <div class="v122_152"></div><span class="v122_153"><a
+                        href="https://www.google.com/maps/dir//R2FV%2BVHQ+SRM+Biotech+Block,+Potheri,+SRM+Nagar,+Kattankulathur,+Tamil+Nadu+603203/@12.8247196,80.0413965,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3a52f70d1594d823:0xe92b95fb573865bd!2m2!1d80.0439714!2d12.8247144?entry=ttu"
+                        style="color: white; text-decoration: none;">Direction</a></span>
                 <div class="v122_154"></div>
             </div>
         </div><span class="v126_48">SRM ROADMAP</span>
@@ -117,7 +140,6 @@
             <div class="v126_26"></div><span class="v126_27">UB Ninth Floor</span><span class="v126_29">• ADMINISTRATIVE
                 OFFICE</span>
         </div><span class="v126_8">NOTICE</span>
-        <div class="v126_10"></div>
         <div class="v207_978">
             <div class="v126_31"></div><span class="v126_32">Direction</span><span class="v126_34">• ATM / BANK</span>
             <div class="v192_961"></div>
@@ -125,8 +147,7 @@
         <div class="v207_971">
             <div class="v126_47"></div>
             <div class="v126_49"></div>
-            <div class="v126_50"></div><span class="v126_51">C.E.N.T.I.N.E.L.S.</span>
-            <div class="v126_63">
+            <!-- <div class="v126_63">
                 <div class="v126_53">
                     <div class="v126_54">
                         <div class="v126_55"></div>
@@ -142,37 +163,33 @@
                         <div class="v126_62"></div>
                     </div>
                 </div>
-            </div>
-            <div class="v126_64">
-                <div class="v126_65"></div>
-                <div class="v126_66"></div>
-            </div>
-            <div class="v126_67"><span class="v126_68">teamcentinelsrm@outlook.com</span></div><span
+            </div> -->
+            <div class="v126_67"><span class="v126_68">teamcentinelsrm@outlook.com</span></div><!--<span
                 class="v126_71">~Developed by:</span>
             <div class="v126_88">
-                <div class="v126_86"></div><span class="v126_74"><a href="https://instagram.com/jeremiahvampdamn?igshid=MzRlODBiNWFlZA==" style="color: white; text-decoration: none;">SOMIL NAYAK</a></span>
-            </div>
+                <div class="v126_86"></div><span class="v126_74"><a
+                        href="https://instagram.com/jeremiahvampdamn?igshid=MzRlODBiNWFlZA=="
+                        style="color: white; text-decoration: none;">SOMIL NAYAK</a></span>
+            </div>-->
             <div class="v136_71"></div><span class="v136_72">C.E.N.T.I.N.E.L.S.</span>
-            <div class="v136_84">
-                <div class="v136_85"></div>
-                <div class="v136_86"></div>
-            </div>
-            <div class="v136_87"><span class="v136_88">teamcentinelsrm@outlook.com</span></div><span
-                class="v136_89">~Developed by:</span>
+            <!--
             <div class="v192_142">
                 <div class="v126_91">
-                    <span class="v126_93"><a href="https://instagram.com/arpankumar1119?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" style="color: white; text-decoration: none;">ARPAN KUMAR</a></span>
+                    <span class="v126_93"><a
+                            href="https://instagram.com/arpankumar1119?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D"
+                            style="color: white; text-decoration: none;">ARPAN KUMAR</a></span>
                 </div>
             </div>
             <div class="v192_143">
                 <div class="v192_153">
                     <div class="v192_154"></div>
                 </div>
-            </div><span class="v192_155"><a href="https://www.linkedin.com/in/rishika-singh-malviya-5457b9267/" style="color: white; text-decoration: none;">RISHIKA SINGH</a></span>
+            </div><span class="v192_155"><a href="https://www.linkedin.com/in/rishika-singh-malviya-5457b9267/"
+                    style="color: white; text-decoration: none;">RISHIKA SINGH</a></span>
             <div class="v192_187">
                 <div class="v192_185"></div>
                 <div class="v192_186"></div>
-            </div>
+            </div> -->
         </div>
     </div>
 </body>
